[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/main/puzzle/PuzzleHudStyleBox.tres" type="StyleBox" id=1]
[ext_resource path="res://src/main/ui/menu/region-grade-labels.gd" type="Script" id=2]
[ext_resource path="res://src/main/ui/menu/region-info-panel.gd" type="Script" id=3]
[ext_resource path="res://src/main/ui/menu/region-description-panel.gd" type="Script" id=4]
[ext_resource path="res://src/main/ui/theme/h4.theme" type="Theme" id=5]
[ext_resource path="res://src/main/ui/theme/h2.theme" type="Theme" id=6]
[ext_resource path="res://src/main/ui/CheatCodeDetector.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/main/ui/menu/paged-region-buttons.gd" type="Script" id=8]
[ext_resource path="res://src/main/ui/RegionSelectButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/main/ui/level-select/HookableRegionGradeLabel.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/main/ui/menu/paged-region-panel.gd" type="Script" id=11]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.1, 0.094, 0.094, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Panel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
theme_override_styles/panel = SubResource( 1 )
script = ExtResource( 11 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
custom_minimum_size = Vector2( -10, 0 )
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer"]
offset_right = 904.0
offset_bottom = 45.0
theme = ExtResource( 6 )
text = "Level Select"
align = 1

[node name="Top" type="Control" parent="VBoxContainer"]
offset_top = 65.0
offset_right = 904.0
offset_bottom = 360.0
size_flags_vertical = 3

[node name="RegionButtons" type="HBoxContainer" parent="VBoxContainer/Top"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -452.0
offset_top = -145.0
offset_right = 452.0
offset_bottom = 145.0
alignment = 1
script = ExtResource( 8 )
RegionButtonScene = ExtResource( 9 )

[node name="LeftArrow" type="Button" parent="VBoxContainer/Top/RegionButtons"]
offset_left = 374.0
offset_top = 132.0
offset_right = 398.0
offset_bottom = 158.0
custom_minimum_size = Vector2( 24, 24 )
size_flags_vertical = 4
theme = ExtResource( 5 )
text = "<"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Top/RegionButtons"]
offset_left = 402.0
offset_right = 502.0
offset_bottom = 290.0
custom_minimum_size = Vector2( 0, 290 )
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="RegionButton" parent="VBoxContainer/Top/RegionButtons/HBoxContainer" instance=ExtResource( 9 )]

[node name="RightArrow" type="Button" parent="VBoxContainer/Top/RegionButtons"]
offset_left = 506.0
offset_top = 132.0
offset_right = 530.0
offset_bottom = 158.0
custom_minimum_size = Vector2( 24, 24 )
size_flags_vertical = 4
theme = ExtResource( 5 )
text = ">"

[node name="GradeLabels" type="Control" parent="VBoxContainer/Top"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
GradeLabelScene = ExtResource( 10 )

[node name="Bottom" type="Control" parent="VBoxContainer"]
offset_top = 380.0
offset_right = 904.0
offset_bottom = 480.0
custom_minimum_size = Vector2( 0, 100 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Bottom"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Description" type="Panel" parent="VBoxContainer/Bottom/HBoxContainer"]
offset_right = 450.0
offset_bottom = 100.0
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource( 1 )
script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Bottom/HBoxContainer/Description"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_right = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_left = 20
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="VBoxContainer/Bottom/HBoxContainer/Description/MarginContainer"]
offset_left = 20.0
offset_top = 5.0
offset_right = 430.0
offset_bottom = 95.0
size_flags_vertical = 1
theme = ExtResource( 5 )
align = 1
valign = 1
autowrap = true

[node name="Info" type="Panel" parent="VBoxContainer/Bottom/HBoxContainer"]
offset_left = 454.0
offset_right = 904.0
offset_bottom = 100.0
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource( 1 )
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Bottom/HBoxContainer/Info"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_right = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_left = 20
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="VBoxContainer/Bottom/HBoxContainer/Info/MarginContainer"]
offset_left = 20.0
offset_top = 5.0
offset_right = 430.0
offset_bottom = 95.0
size_flags_vertical = 1
theme = ExtResource( 5 )
valign = 1

[node name="CheatCodeDetector" parent="." instance=ExtResource( 7 )]
__meta__ = {
"_editor_description_": ""
}
codes = [ "unlock" ]

[connection signal="button_added" from="VBoxContainer/Top/RegionButtons" to="VBoxContainer/Top/GradeLabels" method="_on_RegionButtons_button_added"]
[connection signal="locked_region_focused" from="VBoxContainer/Top/RegionButtons" to="VBoxContainer/Bottom/HBoxContainer/Description" method="_on_RegionButtons_locked_region_focused"]
[connection signal="locked_region_focused" from="VBoxContainer/Top/RegionButtons" to="VBoxContainer/Bottom/HBoxContainer/Info" method="_on_RegionButtons_locked_region_focused"]
[connection signal="region_chosen" from="VBoxContainer/Top/RegionButtons" to="." method="_on_RegionButtons_region_chosen"]
[connection signal="unlocked_region_focused" from="VBoxContainer/Top/RegionButtons" to="VBoxContainer/Bottom/HBoxContainer/Description" method="_on_RegionButtons_unlocked_region_focused"]
[connection signal="unlocked_region_focused" from="VBoxContainer/Top/RegionButtons" to="VBoxContainer/Bottom/HBoxContainer/Info" method="_on_RegionButtons_unlocked_region_focused"]
[connection signal="pressed" from="VBoxContainer/Top/RegionButtons/LeftArrow" to="VBoxContainer/Top/RegionButtons" method="_on_LeftArrow_pressed"]
[connection signal="pressed" from="VBoxContainer/Top/RegionButtons/RightArrow" to="VBoxContainer/Top/RegionButtons" method="_on_RightArrow_pressed"]
[connection signal="cheat_detected" from="CheatCodeDetector" to="VBoxContainer/Top/RegionButtons" method="_on_CheatCodeDetector_cheat_detected"]
